--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     
     <h1 class="smoky-heading">From Learning to Launching</h1>
-    <img src="c:\Users\heman\Downloads\Nikki_sharpened.jpg" height="300px",width=300px alt="Image not found" style="display:block;margin:0 auto" class="profile-pic" >
+    <img src="Nikki_sharpened.jpg" height="300px",width=300px alt="Image not found" style="display:block;margin:0 auto" class="profile-pic" >
     
         <p class="intro-text">
         I'm Nikitha a passionate  web developer who loves playing guitar, anime ,exploring technology.</p> 
